--- a/src/style.css
+++ b/src/style.css
@@ -186,3 +186,29 @@ footer {
 .footer-links a:hover {
     color: #555;
 }
+
+#about {
+    font-size: 96px;
+    margin-bottom: -2rem;
+    font-weight: 500;
+    line-height: 1.2;
+}
+
+#bio {
+    font-size: 24px !important;
+    opacity: 0.7;
+    margin-bottom: 5rem;
+}
+
+#description {
+    margin-bottom: -1rem;
+    margin-top: -4rem;
+}
+
+.email-link {
+    font-size: 28px;
+    text-decoration: none;
+    color: var(--primary-color);
+    display: flex;
+    justify-content: center;
+}
