--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: #6c63ff;
+    --primary-color: #8e65b5e8;
     --secondary-color: #f5f2fe;
     --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
     --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto,
@@ -110,7 +110,8 @@ button:not(:disabled) {
 }
 
 .navbar-nav .nav-link:hover {
-    background-color: #CFCFCF;
+    background-color: #766cb46e;
+    border-radius: 5px;
 }
 
 .custom-mb-3 {
