--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: #8e65b5e8;
+    --primary-color: hsla(293, 56%, 74%, 0.781);
     --secondary-color: #f5f2fe;
     --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
     --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto,
@@ -110,7 +110,7 @@ button:not(:disabled) {
 }
 
 .navbar-nav .nav-link:hover {
-    background-color: #766cb46e;
+    background-color: hsla(308, 100%, 84%, 0.318);
     border-radius: 5px;
 }
 
@@ -185,7 +185,7 @@ footer {
 }
 
 .footer-links a:hover {
-    color: #555;
+    color: #fffefe;
 }
 
 #about {
