--- a/src/style.css
+++ b/src/style.css
@@ -22,6 +22,7 @@ h3 {
 
 h1 {
     font-size: 48px !important;
+    margin-top: 7rem!important;
 }
 
 h2 {
@@ -54,7 +55,7 @@ p {
 
 .navigation-links a {
     margin: 20px;
-    margin-bottom: 4rem;
+    margin-bottom: 20rem;
 }
 
 .primary-link {
@@ -130,18 +131,18 @@ button:not(:disabled) {
     margin-bottom: 0;
 }
 
-.image-container {
+#image-container {
     background-color: var(--secondary-color);
     padding: 10px;
     border-radius: 4px;
     margin-bottom: 3rem;
 }
 
-.image-container img {
+#image-container img {
     height: auto;
 }
 
-.image-description {
+image-description {
     padding: 10px;
     border-radius: 4px;
     flex: 1;
@@ -190,7 +191,7 @@ footer {
 
 #about {
     font-size: 96px;
-    margin-bottom: -2rem;
+    margin-bottom: -rem;
     font-weight: 500;
     line-height: 1.2;
 }
@@ -204,6 +205,10 @@ footer {
 #description {
     margin-bottom: -1rem;
     margin-top: -4rem;
+}
+
+#hobbies {
+    margin-bottom: 4rem;
 }
 
 .email-link {
