--- a/src/style.css
+++ b/src/style.css
@@ -131,14 +131,14 @@ button:not(:disabled) {
     margin-bottom: 0;
 }
 
-.image-container {
+#image-container {
     background-color: var(--secondary-color);
     padding: 10px;
     border-radius: 4px;
     margin-bottom: 3rem;
 }
 
-.image-container img {
+#image-container img {
     height: auto;
 }
 
