--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,12 @@ body {
     padding-top: 100px;
 }
 
+.hero {
+    background-color: var(--secondary-color);
+    background-position: center;
+    padding: 80px 20px;
+}
+
 h1,
 h2,
 h3 {
@@ -85,6 +91,10 @@ button:not(:disabled) {
     font-size: 18px;
     font-family: var(--bs-font-sans-serif);
     margin-bottom: 40px;
+}
+
+.navbar {
+    background-color: white;
 }
 
 .navbar-light .navbar-toggler-icon {
