--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,6 @@
 body {
     margin: 60px auto;
     font-family: var(--bs-font-sans-serif);
-    padding-top: 100px;
 }
 
 .hero {
@@ -112,9 +111,8 @@ button:not(:disabled) {
 }
 
 .navbar-nav {
-    display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: flex-end;
 }
 
 .navbar-nav .nav-link {
@@ -202,6 +200,10 @@ footer {
 
 .footer-links a:hover {
     color: #fffefe;
+}
+
+#box {
+    padding-top: 100px;
 }
 
 #about {
