--- a/src/style.css
+++ b/src/style.css
@@ -53,7 +53,8 @@ p {
     justify-content: center;
 }
 
-::after, ::before {
+::after,
+::before {
     box-sizing: border-box;
 }
 
@@ -113,10 +114,11 @@ button:not(:disabled) {
 .navbar-nav {
     flex-direction: column;
     align-items: flex-end;
+    padding-top: 10px;
 }
 
 .navbar-nav .nav-link {
-    padding: 0.5rem 0.3rem;
+    padding: 0.6rem 0.3rem;
 }
 
 .navbar-brand {
